<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CFD8DC"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/myAppsString"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000022" />

    <Button
        style="@style/firstAppButton"
        android:onClick="spotifyButton"
        android:text="@string/spotifyStreamer" />

    <Button
        style="@style/firstAppButton"
        android:onClick="scoresButton"
        android:text="@string/scoresApp" />

    <Button
        style="@style/firstAppButton"
        android:onClick="libraryButton"
        android:text="@string/libraryApp" />

    <Button
        style="@style/firstAppButton"
        android:onClick="buildButton"
        android:text="@string/buildItBiggerApp" />

    <Button
        style="@style/firstAppButton"
        android:onClick="xyzButton"
        android:text="@string/xyzReaderApp" />

    <Button
        style="@style/capstoneButton"
        android:onClick="capstoneButton"
        android:text="@string/capstoneLabel" />
</LinearLayout>
